--- a/Angular2024/src/app/app.component.html
+++ b/Angular2024/src/app/app.component.html
@@ -1,2 +1,22 @@
+<div>
+  <img src="" alt="">
+</div>
+<header>
+  <div></div>
+</header>
+<section class="wedding">
+
+</section>
+<section class="login">
+
+</section>
+<section class="map">
+
+</section>
+<section class="story">
+
+</section>
+
+
 <h1>Angular Feb2024 exam site!</h1>
 <p>UNDER CONSTRUCTION →→→</p>
