Setup of components, authentication and firebase

--- a/Angular2024/src/app/app.component.html
+++ b/Angular2024/src/app/app.component.html
@@ -1,22 +1,13 @@
-<div>
-  <img src="" alt="">
-</div>
+
 <header>
-  <div></div>
+
 </header>
-<section class="wedding">
+<main>
 
-</section>
-<section class="login">
+</main>
+<footer>
 
-</section>
-<section class="map">
-
-</section>
-<section class="story">
-
-</section>
-
+</footer>
 
 <h1>Angular Feb2024 exam site!</h1>
 <p>UNDER CONSTRUCTION →→→</p>
