--- a/Angular2024/src/app/nav/nav.component.html
+++ b/Angular2024/src/app/nav/nav.component.html
@@ -1,1 +1,8 @@
-<p>nav works!</p>
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="/login">Login</a>
+    <a routerLink="/register">Register</a>
+    <a routerLink="/dashboard">Dashboard</a>
+    <!-- Add other navigation links as needed -->
+  </nav>
+  
