--- a/Angular2024/src/app/app.component.html
+++ b/Angular2024/src/app/app.component.html
@@ -1,13 +1,7 @@
-
-<header>
-
-</header>
-<main>
-
-</main>
-<footer>
-
-</footer>
+<app-header />
+<router-outlet />
+<app-main />
+<app-footer />
 
 <h1>Angular Feb2024 exam site!</h1>
 <p>UNDER CONSTRUCTION →→→</p>
