--- a/Angular2024/src/app/login/login.component.html
+++ b/Angular2024/src/app/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" formControlName="email" id="email">
+      <!-- Display errors for email -->
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" formControlName="password" id="password">
+      <!-- Display errors for password -->
+    </div>
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
+  </form>
+  
