--- a/Angular2024/src/app/register/register.component.html
+++ b/Angular2024/src/app/register/register.component.html
@@ -1,1 +1,18 @@
-<p>register works!</p>
+<form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" formControlName="email" id="email">
+      <!-- Display errors -->
+      <div *ngIf="registerForm.get('email')?.errors?.['required']">Email is required.</div>
+      <div *ngIf="registerForm.get('email')?.errors?.['email']">Not a valid email.</div>
+    </div>
+    <div>
+      <label for="password">Password:</label>
+      <input type="password" formControlName="password" id="password">
+      <!-- Display errors -->
+      <div *ngIf="registerForm.get('password')?.errors?.['required']">Password is required.</div>
+      <div *ngIf="registerForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters.</div>
+    </div>
+    <button type="submit" [disabled]="!registerForm.valid">Register</button>
+  </form>
+  
