update for routes guard

--- a/Angular2024/src/app/nav/nav.component.html
+++ b/Angular2024/src/app/nav/nav.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/login">Login</a>
     <a routerLink="/register">Register</a>
     <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/event-details">Events</a>
     <a routerLink="/logout">Logout</a>
     <!-- Add other navigation links as needed -->
   </nav>
