Login and logout with nav and guards - completed

--- a/Angular2024/src/app/nav/nav.component.html
+++ b/Angular2024/src/app/nav/nav.component.html
@@ -1,19 +1,8 @@
-<!-- <nav>
-  <a routerLink="/">Home</a>
-  <a *ngIf="!isLoggedIn" routerLink="/login">Login</a>
-  <a routerLink="/register">Register</a>
-  <a *ngIf="isLoggedIn" routerLink="/dashboard">Dashboard</a>
-  <a *ngIf="isLoggedIn" routerLink="/event-details">Events</a>
-  <a *ngIf="isLoggedIn" routerLink="/logout">Logout</a>
-</nav> -->
-
-
-<!-- In nav.component.html -->
 <nav>
-    <a routerLink="/">Home</a>
-    <a *ngIf="!(userService.isLogged | async)" routerLink="/login">Login</a>
-    <a routerLink="/register">Register</a>
-    <a *ngIf="(userService.isLogged | async)" routerLink="/dashboard">Dashboard</a>
-    <a *ngIf="(userService.isLogged | async)" routerLink="/event-details">Events</a>
-    <a *ngIf="(userService.isLogged | async)" (click)="userService.logout()">Logout</a>
-  </nav>
+  <a routerLink="/">Home</a>
+  <a *ngIf="!(userService.isLogged | async)" routerLink="/login">Login</a>
+  <a *ngIf="!(userService.isLogged | async)" routerLink="/register">Register</a>
+  <a *ngIf="userService.isLogged | async" routerLink="/dashboard">Dashboard</a>
+  <a *ngIf="userService.isLogged | async" routerLink="/event-details">Events</a>
+  <a *ngIf="userService.isLogged | async" (click)="userService.logout()">Logout</a>
+</nav>
