--- a/Angular2024/src/app/footer/footer.component.html
+++ b/Angular2024/src/app/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<!-- footer.component.html -->
+<footer>
+  <p>&copy; {{ currentYear }} Ministry of weddings. All rights reserved.</p>
+</footer>
