--- a/Angular2024/src/app/register/register.component.html
+++ b/Angular2024/src/app/register/register.component.html
@@ -2,6 +2,8 @@
 <h1>REGISTER</h1>
 <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
     <div>
+      <label for="userName">User Name:</label>
+      <input type="userName" formControlName="userName" id="userName">
       <label for="email">Email:</label>
       <input type="email" formControlName="email" id="email">
       <!-- Display errors -->
