--- a/Angular2024/src/app/register/register.component.html
+++ b/Angular2024/src/app/register/register.component.html
@@ -1,22 +1,43 @@
 <app-nav />
 <h1>REGISTER</h1>
 <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
-    <div>
-      <label for="userName">User Name:</label>
-      <input type="userName" formControlName="userName" id="userName">
-      <label for="email">Email:</label>
-      <input type="email" formControlName="email" id="email">
-      <!-- Display errors -->
-      <div *ngIf="registerForm.get('email')?.errors?.['required']">Email is required.</div>
-      <div *ngIf="registerForm.get('email')?.errors?.['email']">Not a valid email.</div>
+  <div>
+    <label for="email">Email:</label>
+    <input type="email" formControlName="email" id="email" />
+    <!-- Display errors -->
+    <div *ngIf="registerForm.get('email')?.errors?.['required']">
+      Email is required.
+    </div>
+    <div *ngIf="registerForm.get('email')?.errors?.['email']">
+      Not a valid email.
+    </div>
+  </div>
+  <div>
+    <label for="password">Password:</label>
+    <input type="password" formControlName="password" id="password" />
+    <!-- Display errors -->
+    <div *ngIf="registerForm.get('password')?.errors?.['required']">
+      Password is required.
+    </div>
+    <div *ngIf="registerForm.get('password')?.errors?.['minlength']">
+      Password must be at least 6 characters.
     </div>
     <div>
-      <label for="password">Password:</label>
-      <input type="password" formControlName="password" id="password">
-      <!-- Display errors -->
-      <div *ngIf="registerForm.get('password')?.errors?.['required']">Password is required.</div>
-      <div *ngIf="registerForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters.</div>
+      <label for="name">Name:</label>
+    <input type="text" formControlName="name" placeholder="Full Name" required />
     </div>
-    <button type="submit" [disabled]="!registerForm.valid">Register</button>
-  </form>
-  
+    <div>
+      <label for="attending">Attending:</label>
+    <input type="checkbox" formControlName="attending" placeholder="Attending" />
+    </div>
+    <div>
+      <label for="group">Number of people:</label>
+    <input type="number" formControlName="group" placeholder="Group" />
+    </div>
+    <div>
+      <label for="accomodation">Accomodation:</label>
+    <input type="text" formControlName="accomodation" placeholder="Accomodation" />
+    </div>
+  </div>
+  <button type="submit" [disabled]="!registerForm.valid">Register</button>
+</form>
