--- a/Angular2024/src/app/register/register.component.html
+++ b/Angular2024/src/app/register/register.component.html
@@ -32,7 +32,7 @@
     </div>
     <div>
       <label for="group">Number of people:</label>
-    <input type="number" formControlName="group" placeholder="Group" />
+    <input type="number" formControlName="group" min="1" value="1"  step="1" />
     </div>
     <div>
       <label for="accomodation">Accomodation:</label>
