--- a/Angular2024/src/app/event-details/event-details.component.css
+++ b/Angular2024/src/app/event-details/event-details.component.css
@@ -1,94 +1,108 @@
 /* event-details.component.css */
 .card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 20px auto;
-    max-width: 600px;
-    padding: 20px;
-    width: 25vw;
-  }
-  
-  .card img.event-photo {
-    border-radius: 4px;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .card h2 {
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .card p {
-    color: #666;
-    line-height: 1.6;
-    margin-bottom: 10px;
-  }
-  
-  .card small {
-    display: block;
-    margin-top: 10px;
-    text-align: right;
-    color: #999;
-  }
-  
-  .comments-section {
-    margin-top: 30px;
-  }
-  
-  .comment {
-    background-color: #f9f9f9;
-    border-left: 4px solid #007bff;
-    margin-top: 15px;
-    padding: 10px 15px;
-  }
-  
-  .comment p {
-    margin: 0;
-  }
-  
-  .comment small {
-    color: #666;
-  }
-  
-  /* Adjust the button styles as needed */
-  button {
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    padding: 10px 15px;
-    margin-right: 5px;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Style the form and textarea */
-  form {
-    margin-top: 20px;
-  }
-  
-  textarea {
-    margin-top: 10px;
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical; /* Allows vertical resizing, might be useful for writing longer comments */
-  }
-  
-  input[type="text"], textarea, select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  max-width: 800px;
+  padding: 20px;
+  width: 60vw;
+}
+
+.card-event {
+  display: flex;
+}
+
+h2 {
+  border-bottom: 1px solid gray;
+}
+
+.card-event-info {
+  flex-direction: column;
+}
+
+.card img.event-photo {
+  border-radius: 8px;
+  max-width: 50%;
+  height: auto;
+  box-shadow: 10px 5px 5px rgba(173, 173, 123, 0.959);
+}
+
+.card h2 {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.card p {
+  color: #666;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
+
+.card small {
+  display: block;
+  margin-top: 10px;
+  text-align: right;
+  color: #999;
+}
+
+.comments-section {
+  margin-top: 30px;
+}
+
+.comment {
+  background-color: #f9f9f9;
+  border-left: 4px solid #007bff;
+  margin-top: 15px;
+  padding: 10px 15px;
+}
+
+.comment p {
+  margin: 0;
+}
+
+.comment small {
+  color: #666;
+}
+
+/* Adjust the button styles as needed */
+button {
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  padding: 10px 15px;
+  margin-right: 5px;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+/* Style the form and textarea */
+form {
+  margin-top: 20px;
+}
+
+textarea {
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical; /* Allows vertical resizing, might be useful for writing longer comments */
+}
+
+input[type="text"],
+textarea,
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
