--- a/Angular2024/src/app/add-event/add-event.component.html
+++ b/Angular2024/src/app/add-event/add-event.component.html
@@ -28,5 +28,5 @@
     <label for="photoURL">Photo URL:</label>
     <input type="text" id="photoURL" formControlName="photoURL" />
   </div>
-  <button type="submit" [disabled]="!eventForm.valid">Add Event</button>
+  <button type="submit" [disabled]="!eventForm.valid">{{ eventId ? 'Update Event' : 'Add Event' }}</button>
 </form>
