--- a/Angular2024/src/app/dashboard/dashboard.component.html
+++ b/Angular2024/src/app/dashboard/dashboard.component.html
@@ -7,7 +7,9 @@
       <img class="card-img-top" [src]="event.photoURL" alt="Event image" />
       <div class="card-body">
         <h5 class="card-title">{{ event.title }}</h5>
-        <p class="card-text">{{ event.description | slice : 0 : 100 }}...</p>
+        <p><strong>Date:</strong> {{ event.date | date : "fullDate" }}</p>
+        <p><strong>Time:</strong> {{ event.time }} Hrs</p>
+        <h5 class="card-text">{{ event.description | slice : 0 : 100 }}...</h5>
         <a [routerLink]="['/event-details', event.id]" class="btn btn-primary"
           >Details</a
         >
