--- a/Angular2024/src/app/nav/nav.component.css
+++ b/Angular2024/src/app/nav/nav.component.css
@@ -2,7 +2,6 @@ nav {
   width: 100%;
   height: 5vh;
   display: flex;
-  justify-content: center;
   border-top: 3px solid pink;
   position: sticky;
   background-color: rgb(249, 245, 217);
@@ -11,10 +10,25 @@ nav {
 nav a {
   /* margin: 5px; */
   padding: 0 20px 15px;
+  color:black;
 }
 
 nav a:hover {
   color: purple;
   background-color: pink;
   border-radius: 0 0 15px 15px;
+}
+
+nav .links {
+  width: 100%;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+}
+
+nav .username {
+display: flex;
+justify-content: flex-end;
+margin-right: 30px;
+min-width: 20vw;
 }
