--- a/Angular2024/src/app/nav/nav.component.html
+++ b/Angular2024/src/app/nav/nav.component.html
@@ -1,9 +1,24 @@
 <nav>
-  <a routerLink="/">Home</a>
-  <a *ngIf="!(userService.isLogged | async)" routerLink="/login">Login</a>
-  <a *ngIf="!(userService.isLogged | async)" routerLink="/register">Register</a>
-  <a *ngIf="userService.isLogged | async" routerLink="/dashboard">Dashboard</a>
-  <!-- <a *ngIf="userService.isLogged | async" routerLink="/event-details">Events</a> -->
-  <a *ngIf="userService.isLogged | async" routerLink="/add-event">Add Event</a>
-  <a *ngIf="userService.isLogged | async" (click)="userService.logout()">Logout</a>
+  <div class="links">
+    <a routerLink="/">Home</a>
+    <a *ngIf="!(userService.isLogged | async)" routerLink="/login">Login</a>
+    <a *ngIf="!(userService.isLogged | async)" routerLink="/register"
+      >Register</a
+    >
+    <a *ngIf="userService.isLogged | async" routerLink="/dashboard"
+      >Dashboard</a
+    >
+    <!-- <a *ngIf="userService.isLogged | async" routerLink="/event-details">Events</a> -->
+    <a *ngIf="userService.isLogged | async" routerLink="/add-event"
+      >Add Event</a
+    >
+    <a *ngIf="userService.isLogged | async" (click)="userService.logout()"
+      >Logout</a
+    >
+  </div>
+  <div class="username">
+    <span *ngIf="authService.currentUserDetails$ | async as userDetails">
+      {{ userDetails.name || userDetails.email }}
+    </span>
+  </div>
 </nav>
