--- a/Angular2024/src/app/footer/footer.component.html
+++ b/Angular2024/src/app/footer/footer.component.html
@@ -1,4 +1,5 @@
 <!-- footer.component.html -->
 <footer>
-  <p>&copy; {{ currentYear }} Ministry of weddings. All rights reserved.</p>
+  <p>&copy; {{ currentYear }} Ministry of weddings.</p>
+  <p>All rights reserved.</p>
 </footer>
