--- a/Angular2024/src/app/footer/footer.component.css
+++ b/Angular2024/src/app/footer/footer.component.css
@@ -5,5 +5,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
+    text-align: center;
+    font-size: 0.8rem;
   }
   
