--- a/Angular2024/src/app/nav/nav.component.css
+++ b/Angular2024/src/app/nav/nav.component.css
@@ -1,34 +1,48 @@
+
+
+
+
+
 nav {
   width: 100%;
-  height: 5vh;
   display: flex;
+  justify-content: space-between; /* Adjusted to space-between */
+  align-items: center; /* Ensure vertical alignment is centered */
   border-top: 3px solid pink;
   position: sticky;
+  top: 0; /* Ensure nav sticks to the top */
   background-color: rgb(249, 245, 217);
+  padding: 0 20px; /* Add padding on the sides */
+  z-index: 2;
+}
+
+nav .links,
+nav .username {
+  display: flex;
+  align-items: center;
+}
+
+nav .links {
+  justify-content: center;
+  flex-grow: 1; /* Allows the links section to grow */
+}
+
+nav .username {
+  position: absolute;
+  right: 15px;
+  flex-grow: 0; /* Prevents the username section from growing */
+  margin-left: auto; /* Automatically pushes username to the right */
+  padding-left: 20px; /* Adds some spacing between links and username */
 }
 
 nav a {
-  /* margin: 5px; */
-  padding: 0 20px 15px;
-  color:black;
+  padding: 10px 15px; /* Adjusted padding for better spacing */
+  color: black;
+  text-decoration: none; /* Removes underline from links */
 }
 
 nav a:hover {
   color: purple;
   background-color: pink;
-  border-radius: 0 0 15px 15px;
-}
-
-nav .links {
-  width: 100%;
-  height: 5vh;
-  display: flex;
-  justify-content: center;
-}
-
-nav .username {
-display: flex;
-justify-content: flex-end;
-margin-right: 30px;
-min-width: 20vw;
+  border-radius: 0 0 15px 15px; /* Rounded corners for hover effect */
 }
