--- a/Angular2024/src/app/header/header.component.css
+++ b/Angular2024/src/app/header/header.component.css
@@ -55,22 +55,28 @@ h1 {
 header {
   position: relative;
   height: 95vh; 
+  /* background-color: #f3f3f3;  */
   width: 100%;
-  background-color: #f3f3f3; 
+
+
+  transition: height 3s ease;
+  overflow: hidden;
 }
 
 .header-image {  
   position: absolute;
   left: -5%;
   width: 105%;
-  height: 100%;
+  /* height: 100%; */
   object-fit: cover;
+
+  height: auto;
 }
 
-header {
-  transition: height 0.5s ease-in-out;
+header.shrunk {
+  height: 15vh;
 }
 
-.shrunk {
-  height: 0; 
+:not(.shrunk) {
+  height: 95vh;
 }
