Dashboard to be visible by unauthenticated visitors

--- a/Angular2024/src/app/app.component.css
+++ b/Angular2024/src/app/app.component.css
@@ -5,4 +5,5 @@ body {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background-image: url('https://wallpaperset.com/w/full/1/0/7/443855.jpg');
 }
