--- a/Angular2024/src/app/home/home.component.html
+++ b/Angular2024/src/app/home/home.component.html
@@ -1,41 +1,70 @@
 <app-header />
 <app-nav />
 <header>
-    <h1>This Is Our Special Day!</h1>
+  <h1>This Is Our Special Day!</h1>
 </header>
-
-<section>
+<article>
+  <section>
     <p>
-        As we embark on this journey together, we are thrilled to share every moment with you, our beloved family and friends. This website serves as the gateway to our wedding event, providing you with all the essential details, updates, and more about our celebration of love.
+      As we embark on this journey together, we are thrilled to share every
+      moment with you, our beloved family and friends. This website serves as
+      the gateway to our wedding event, providing you with all the essential
+      details, updates, and more about our celebration of love.
     </p>
     <p>
-        Our story began in the most unexpected way, and it has blossomed into a beautiful adventure we never want to end. We've laughed, loved, and grown together, and now we're ready to take the next big step. On this site, you'll find everything you need to know about our wedding day—from the schedule of events to venue directions, accommodation details, and RSVP instructions.
+      Our story began in the most unexpected way, and it has blossomed into a
+      beautiful adventure we never want to end. We've laughed, loved, and grown
+      together, and now we're ready to take the next big step. On this site,
+      you'll find everything you need to know about our wedding day—from the
+      schedule of events to venue directions, accommodation details, and RSVP
+      instructions.
     </p>
-</section>
+  </section>
 
-<section>
+  <section>
     <h2>Event Details</h2>
     <p>
-        The ceremony will take place at the picturesque <strong>St. Nicholas Orthodox Church in Bratislava</strong>, an enchanting location that captured our hearts from the moment we saw it. We've planned a day that we hope will be as memorable for you as it will be for us, filled with joy, laughter, and love. The detailed schedule includes the ceremony time, reception, dinner, and dancing hours, ensuring you know exactly where to be and when.
+      The ceremony will take place at the picturesque
+      <strong>St. Nicholas Orthodox Church in Bratislava</strong>, an enchanting
+      location that captured our hearts from the moment we saw it. We've planned
+      a day that we hope will be as memorable for you as it will be for us,
+      filled with joy, laughter, and love. The detailed schedule includes the
+      ceremony time, reception, dinner, and dancing hours, ensuring you know
+      exactly where to be and when.
     </p>
-</section>
+  </section>
 
-<section>
+  <section>
     <h2>Your Presence</h2>
     <p>
-        Your presence at our wedding means the world to us. This celebration wouldn't be the same without you, as you've played such a significant role in our lives. We're excited to share this day with you and make memories that we'll cherish forever.
+      Your presence at our wedding means the world to us. This celebration
+      wouldn't be the same without you, as you've played such a significant role
+      in our lives. We're excited to share this day with you and make memories
+      that we'll cherish forever.
     </p>
     <p>
-        Please take a moment to explore our site, where you'll find photo galleries of our journey together, a guest book we'd love for you to sign, and more about the event we're so eagerly anticipating. Don't forget to RSVP by <strong>13 July 2024</strong> to help us make the necessary arrangements for a perfect day.
+      Please take a moment to explore our site, where you'll find photo
+      galleries of our journey together, a guest book we'd love for you to sign,
+      and more about the event we're so eagerly anticipating. Don't forget to
+      RSVP by <strong>13 July 2024</strong> to help us make the necessary
+      arrangements for a perfect day.
     </p>
-</section>
-
+  </section>
+</article>
 <footer>
-    <p>
-        As we count down the days to <strong>27 July 2024</strong>, we're filled with gratitude and excitement. Thank you for being part of our lives and for joining us as we say "I do." This website will be updated regularly with new information, so please check back often.
-    </p>
-    <p>We can't wait to celebrate our love with each and every one of you. See you at <strong>St. Nicholas Orthodox Church in Bratislava</strong>!</p>
-    <hr />
-    <p>With love,<br>
-    <strong>Hani & Mariusz</strong></p>
+  <p>
+    As we count down the days to <strong>27 July 2024</strong>, we're filled
+    with gratitude and excitement. Thank you for being part of our lives and for
+    joining us as we say "I do." This website will be updated regularly with new
+    information, so please check back often.
+  </p>
+  <p>
+    We can't wait to celebrate our love with each and every one of you. See you
+    at <strong>St. Nicholas Orthodox Church in Bratislava</strong>!
+  </p>
+  <hr />
+  <p>
+    With love,<br />
+    <strong>Hani & Mariusz</strong>
+  </p>
 </footer>
