--- a/Angular2024/src/app/dashboard/dashboard.component.css
+++ b/Angular2024/src/app/dashboard/dashboard.component.css
@@ -24,6 +24,8 @@
     border: px solid rgba(0,0,0,.125);
     background-image:url('https://freedesignfile.com/upload/2016/06/Elegant-floral-background-illustration-vector-07.jpg');
     background-position: -2px;
+    background-repeat: no-repeat;
+    background-size: cover;
     box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
     border-radius: .25rem;
     margin-bottom: 20px; 
