--- a/Angular2024/src/app/dashboard/dashboard.component.html
+++ b/Angular2024/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,7 @@
-
+<!-- 
   <app-header />
   <app-nav />
-
 <h1>DASHBOARD</h1>
-<!-- In dashboard.component.html -->
 <div class="row">
   <div class="col-sm-4" *ngFor="let event of events">
     <div class="card">
@@ -16,6 +14,25 @@
         <a [routerLink]="['/event-details', event.id]" class="btn btn-primary"
           >Details</a
         >
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
+<app-header />
+<app-nav />
+<h1>DASHBOARD</h1>
+<div class="row">
+  <div class="col-sm-4" *ngFor="let event of events">
+    <div class="card">
+      <img class="card-img-top" [src]="event.photoURL" alt="Event image" />
+      <div class="card-body">
+        <h5 class="card-title">{{ event.title }}</h5>
+        <p><strong>Date:</strong> {{ event.date | date : "fullDate" }}</p>
+        <p><strong>Time:</strong> {{ event.time }} Hrs</p>
+        <h5 class="card-text">{{ event.description | slice : 0 : 100 }}...</h5>
+        <a *ngIf="authService.currentUser$ | async" [routerLink]="['/event-details', event.id]" class="btn btn-primary">Details</a>
       </div>
     </div>
   </div>
