--- a/Angular2024/src/app/dashboard/dashboard.component.html
+++ b/Angular2024/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
 
 <app-header />
 <app-nav />
-<h1>DASHBOARD</h1>
+<!-- <h1>DASHBOARD</h1> -->
 <div class="row">
   <div class="col-sm-4" *ngFor="let event of events">
     <div class="card">
