--- a/Angular2024/src/app/home/home.component.css
+++ b/Angular2024/src/app/home/home.component.css
@@ -25,7 +25,7 @@ article{
 section {
     padding: 20px;
     margin: 20px 0;
-    background: white;
+    background: rgba(255, 255, 255, 0.65);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
@@ -49,7 +49,7 @@ footer {
     text-align: center;
     padding: 20px;
     margin-top: 30px;
-    background-color: #eee;
+    background-color: #fdffdf3a;
     color: #666;
 }
 
