--- a/Angular2024/src/app/home/home.component.css
+++ b/Angular2024/src/app/home/home.component.css
@@ -19,7 +19,7 @@ header h1 {
 
 article{
 	background-image: url('https://wallpaperset.com/w/full/1/0/7/443855.jpg');
-    /* padding: 0 3em; */
+    padding: 0 3em;
 }
 
 section {
