--- a/Angular2024/src/app/dashboard/dashboard.component.css
+++ b/Angular2024/src/app/dashboard/dashboard.component.css
@@ -1,91 +1,115 @@
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 15px;
-    min-height: 83vh;
-  }
-  
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15px;
+  min-height: 83vh;
+}
+
+.col-sm-4 {
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+  padding-right: 15px;
+  padding-left: 15px;
+  box-sizing: border-box;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: px solid rgba(0, 0, 0, 0.125);
+  background-image: url("https://freedesignfile.com/upload/2016/06/Elegant-floral-background-illustration-vector-07.jpg");
+  background-position: -2px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
+  border-radius: 0.25rem;
+  margin-bottom: 20px;
+}
+
+.card-img-top {
+  width: 100%;
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+  object-fit: cover;
+  height: 200px;
+}
+
+.card-body {
+  flex: 1 1 auto;
+  padding: 1.25rem;
+}
+
+.card-title {
+  margin-bottom: 0.75rem;
+}
+
+.card-text {
+  margin-bottom: 1.25rem;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: rgb(98, 110, 34);
+  border-color: rgb(98, 110, 34);
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  background-clip: padding-box;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-primary:hover {
+  background-color: rgb(49, 55, 17);
+  border-color:  rgb(49, 55, 17);
+}
+
+.popup {
+  position: relative;
+  display: flex;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  background-image: url("https://freedesignfile.com/upload/2016/06/Elegant-floral-background-illustration-vector-07.jpg");
+  background-position: -2px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.4);
+  font-size: 1rem;
+}
+
+.but{
+  margin-top: 2rem;
+}
+
+.card-img-popup {
+  width: 50%;
+  margin-right: 5%;
+}
+
+@media (max-width: 1080px) {
   .col-sm-4 {
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-    padding-right: 15px;
-    padding-left: 15px;
-    box-sizing: border-box;
+    flex: 0 0 50%;
+    max-width: 50%;
   }
-  
-  .card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: px solid rgba(0,0,0,.125);
-    background-image:url('https://freedesignfile.com/upload/2016/06/Elegant-floral-background-illustration-vector-07.jpg');
-    background-position: -2px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.7);
-    border-radius: .25rem;
-    margin-bottom: 20px; 
+}
+
+@media (max-width: 768px) {
+  .col-sm-4 {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
-  
-  .card-img-top {
-    width: 100%;
-    border-top-left-radius: calc(.25rem - 1px);
-    border-top-right-radius: calc(.25rem - 1px);
-    object-fit: cover; 
-    height: 200px; 
-  }
-  
-  .card-body {
-    flex: 1 1 auto;
-    padding: 1.25rem;
-  }
-  
-  .card-title {
-    margin-bottom: .75rem;
-  }
-  
-  .card-text {
-    margin-bottom: 1.25rem;
-  }
-  
-  .btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
-    display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    vertical-align: middle;
-    user-select: none;
-    background-clip: padding-box;
-    border: 1px solid transparent;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
-  }
-  
-  @media (max-width: 1080px) {
-    .col-sm-4 {
-      flex: 0 0 50%;
-      max-width: 50%;
-    }
-  }
-  
-  @media (max-width: 768px) {
-    .col-sm-4 {
-      flex: 0 0 100%;
-      max-width: 100%;
-    }
-  }
-  
+}
