--- a/Angular2024/src/app/dashboard/dashboard.component.html
+++ b/Angular2024/src/app/dashboard/dashboard.component.html
@@ -32,8 +32,8 @@
             alt="Event image"
           />
           <div>
-            <h4>{{ event.title }}</h4>
-            <p><strong>Time:</strong> {{ event.time }} Hrs</p>
+            <h3>{{ event.title }}</h3>
+            <p><strong>{{event.date | date: "dd.MM.yyyy" }}</strong>  {{ event.time }} Hrs</p>
             <p>{{ event.description | slice : 0 : 100 }}</p>
             <div *ngIf="authService.currentUser$ | async" class="but">
               <a
