--- a/Angular2024/src/app/event-details/event-details.component.css
+++ b/Angular2024/src/app/event-details/event-details.component.css
@@ -68,7 +68,7 @@ h2 {
   color: #666;
 }
 
-/* Adjust the button styles as needed */
+/* 
 button {
   background-color: #007bff;
   border: none;
@@ -81,7 +81,32 @@ button {
 
 button:hover {
   background-color: #0056b3;
+} */
+
+button {
+  color: #fff;
+  background-color: rgb(98, 110, 34);
+  border-color: rgb(98, 110, 34);
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  background-clip: padding-box;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+button:hover {
+  background-color: rgb(49, 55, 17);
+  border-color:  rgb(49, 55, 17);
+}
+
 
 /* Style the form and textarea */
 form {
