--- a/Angular2024/src/app/register/register.component.css
+++ b/Angular2024/src/app/register/register.component.css
@@ -38,7 +38,8 @@ h1 {
   }
   
   input[type="checkbox"] {
-    width: auto;
+    width: 20px;
+    height: 20px;
     margin-top: 2px;
   }
   
@@ -53,19 +54,29 @@ h1 {
     font-size: 0.9rem;
   }
 
-  button {
+  button, input[type="file"] {
     width: 100%;
-    padding: 10px;
-    background-color: #007bff; /* Bootstrap 'primary' color */
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+    color: #fff;
+    background-color: rgb(98, 110, 34);
+    border-color: rgb(98, 110, 34);
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
     font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
   
   button:hover {
-    background-color: #0056b3; /* A darker shade of the primary color */
+    background-color: rgb(49, 55, 17);
+    border-color:  rgb(49, 55, 17);
   }
   
   button:disabled {
